# orbital_propagator

./: .gitignore  LICENSE  README.md
doc/: Doxyfile
src/: AtmModel.h  Body.cpp  Body.h  CMakeLists.txt  EnvironmentModel.cpp  EnvironmentModel.h  EqMotion.cpp  EqMotion.h  Integrator.cpp  Integrator.h  Magnetometer.cpp  Magnetometer.h  Quaternion.cpp  Quaternion.h  ReferenceFrame.h  Sensor.h  Sim.cpp  Sim.h  Spacecraft.cpp  Spacecraft.h  State.cpp  State.h  StateVector.cpp  StateVector.h  constants.h  main.cpp  perturbations.cpp  perturbations.h  state_type.h
src/algebra/: Matrix.h  Quaternion.cpp  Quaternion.h  Vector.h  transformations.h
src/dimensions/: Acceleration.cpp  Acceleration.h  AngularAcceleration.cpp  AngularAcceleration.h  AngularVelocity.cpp  AngularVelocity.h  Area.cpp  Area.h  BaseDimension.cpp  BaseDimension.h  Dimensions.h  Distance.cpp  Distance.h  Mass.cpp  Mass.h  Time.cpp  Time.h  Velocity.cpp  Velocity.h
